@@ -11,13 +11,21 @@ SparkSQL connector for Crossdata.
 Requirements
 ------------
 
+Tune up ```MAVEN_OPTS``` with:
+
+    > export MAVEN_OPTS="-XX:MaxPermSize=512m -Xmx3072m"
 
 Stratio HBase connector must be downloaded from  [here] (<https://github.com/Stratio/hbase>) and installed with
 
     hbase/
 
-    > mvn clean install
+    > mvn -e -T1C -Phbase,hadoop-2.4  -Dhadoop.version=2.4.0 -DskipTests clean package install
 
+As well as [Stratio Cassandra connector] (<https://github.com/Stratio/spark-cassandra-connector>) (branch SPARKC-112)
+
+    spark-cassandra-connector/
+
+    > sbt publishM2
 
 Stratio SparkSQL must be installed and started. [Crossdata] (<https://github.com/Stratio/crossdata>) is needed in order to interact with this connector.
 
@@ -26,7 +34,9 @@ Compiling Stratio SparkSQL Connector
 
 To automatically build execute the following command:
 
-    > mvn clean compile install
+    stratio-connector-sparkSQL/
+
+    > mvn clean compile install -DskipTests
 
 Build an executable SparkSQL Connector
 --------------------------------------
